# rust-component

./: .gitignore  .npmignore  Cargo.toml  README.md  example.ts  package.json  tsconfig.json
.github/workflows/: rust.yml
src/: lib.rs  utils.rs
